package tal.XOProject.tictactoe;

public class Userprofile {
    public String phone;
    public String email;
    public String name;
    public String password;
    public String gender;

    public Userprofile(String phone1, String email1, String gender1, String name1, String password1)
    {
        this.phone=phone1;
        this.email=email1;
        this.name=name1;
        this.gender=gender1;
        this.password=password1;
    }

}

