@startuml

title __SPLASHSCREEN.APP's Class Diagram__\n

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.BackgroundSoundService {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.BuildConfig {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.Controller {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.Forgot_pass {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.GameOverActivity {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.ListActivity {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.LoginActivity {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.MainActivity {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.ModeSelectActivity {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.Model {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.MyBroadcastReceiver {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.Player {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.PlayerAdapter {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.PlayerDataBase {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.Register {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.SplashScreen {
    }
  }
  

  namespace tal.XOProject.tictactoe {
    class tal.XOProject.tictactoe.Userprofile {
    }
  }
  

  tal.XOProject.tictactoe.BackgroundSoundService -up-|> android.app.Service
  tal.XOProject.tictactoe.Controller o-- tal.XOProject.tictactoe.Model : model
  tal.XOProject.tictactoe.Forgot_pass -up-|> androidx.appcompat.app.AppCompatActivity
  tal.XOProject.tictactoe.GameOverActivity -up-|> androidx.appcompat.app.AppCompatActivity
  tal.XOProject.tictactoe.ListActivity .up.|> android.widget.AdapterView.OnItemLongClickListener
  tal.XOProject.tictactoe.ListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  tal.XOProject.tictactoe.ListActivity o-- tal.XOProject.tictactoe.PlayerAdapter : adapter
  tal.XOProject.tictactoe.ListActivity o-- tal.XOProject.tictactoe.PlayerDataBase : playerDataBase
  tal.XOProject.tictactoe.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  tal.XOProject.tictactoe.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  tal.XOProject.tictactoe.MainActivity o-- tal.XOProject.tictactoe.Controller : controller
  tal.XOProject.tictactoe.ModeSelectActivity -up-|> androidx.appcompat.app.AppCompatActivity
  tal.XOProject.tictactoe.MyBroadcastReceiver -up-|> android.content.BroadcastReceiver
  tal.XOProject.tictactoe.Player .up.|> java.lang.Comparable
  tal.XOProject.tictactoe.PlayerAdapter -up-|> android.widget.ArrayAdapter
  tal.XOProject.tictactoe.PlayerDataBase -up-|> android.database.sqlite.SQLiteOpenHelper
  tal.XOProject.tictactoe.Register -up-|> androidx.appcompat.app.AppCompatActivity
  tal.XOProject.tictactoe.SplashScreen -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
